--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -24,8 +24,14 @@
         <span>By recently released</span>
         <div id="brand">
           <label for="brand-select">By brands:</label>
-          <select name="brand" id="brand-select"> </select>
-
+          <select name="brand" id="brand-select">
+            <option value="none">none</option>
+            <option value="loom">loom</option>
+            <option value="coteleparis">coteleparis</option>
+            <option value="adresse">adresse</option>
+            <option value="1083">1083</option>
+            <option value="dedicated">dedicated</option>
+          </select>
         </div>
       </div>
       <div id="sort">
