--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -4,8 +4,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>👕 Clear Fahion | Environmentally & human-friendly clothes</title>
   </head>
+  <style>
+    body {
+      background-image: url('https://images.unsplash.com/photo-1451847251646-8a6c0dd1510c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTB8fHN1c3RhaW5hYmxlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: 100% 100%;
+    }
+  </style>
   <body>
-    <h1>Clear fashion</h1>
+    <h1 style="text-align: center;">Clear fashion</h1>
     <section id="options">
       <div id="show">
         <label for="show-select">Show:</label>
