--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -6,7 +6,7 @@
   </head>
   <style>
     body {
-      background-image: url('https://images.unsplash.com/photo-1451847251646-8a6c0dd1510c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NTB8fHN1c3RhaW5hYmxlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60');
+      background-image: url('https://images.unsplash.com/photo-1603513492128-ba7bc9b3e143?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8YmVpZ2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60');
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-size: 100% 100%;
