API Vercel functional

--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -34,10 +34,8 @@
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select">
             <option value="none">none</option>
-            <option value="loom">loom</option>
-            <option value="coteleparis">coteleparis</option>
+            <option value="montlimar">loom</option>
             <option value="adresse">adresse</option>
-            <option value="1083">1083</option>
             <option value="dedicated">dedicated</option>
           </select>
         </div>
